tests/ui/pattern/usefulness/issue-12369.stderr
error: unreachable pattern
  --> $DIR/issue-12369.rs:9:9
   |
LL |         &[10,a, ref rest @ ..] => 10
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this arm is never executed
   |
note: the lint level is defined here
  --> $DIR/issue-12369.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

